--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,11 +1,9 @@
 name: Generate snake animation
 
 on:
-  schedule: # execute every 6 hours
-    - cron: "0 */6 * * *"
-
-  workflow_dispatch:
-
+  schedule:
+    - cron: "0 0 * * *"  # Run once daily at midnight
+  workflow_dispatch:  # Allow manual trigger
   push:
     branches:
       - main
@@ -18,16 +16,15 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
       - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github-dark
+          github_user_name: RobinMillford
+          outputs: |
+            dist/snake.svg?palette=github-dark
+            dist/snake-dark.svg?palette=github-dark
 
-      - name: Push snake.svg to the output branch
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
